--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -70,7 +70,7 @@
 <script>
     localStorage.setItem("modelId", 4);
 </script>
-<script src="https://cdn.jsdelivr.net/gh/lightfish-zhang/live2d-widget@latest/autoload.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/lightfish-zhang/live2d-widget@master/autoload.js"></script>
 
 {% if site.googlaAnalyticsID %}
 <script>
