--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,19 +67,19 @@
 <script>
     !window.SmoothScroll && document.write(unescape('%3Cscript src="{{ site.baseurl }}/style/js/SmoothScroll.min.js"%3E%3C/script%3E'))
 </script>
-<script>
+<!-- <script>
     localStorage.setItem("modelId", 4);
 </script>
-<script src="https://cdn.jsdelivr.net/gh/lightfish-zhang/live2d-widget@master/autoload.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/lightfish-zhang/live2d-widget@master/autoload.js"></script> -->
 
 {% if site.googlaAnalyticsID %}
 <script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', '{{site.googlaAnalyticsID}}', 'auto');
     ga('send', 'pageview');
